--- a/Notification Service Extension/es.lproj/Localizable.strings
+++ b/Notification Service Extension/es.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "button.done" = "Listo";
 
 /* Title for button that will take user to iOS settings (e.g., to enable some permission we need). */
-"button.go.to.settings" = "Ir a la configuración";
+"button.go.to.settings" = "Ir a configuración";
 
 /* Title for generic Invite button. */
 "button.invite" = "Invitar";
@@ -68,10 +68,10 @@
 "button.update" = "Actualizar";
 
 /* Alert message when missing microphone access */
-"chat.mic.access.denied.message" = "Para capacitar la grabación de audio, por favor ve a Configuración y enciende el micrófono";
+"chat.mic.access.denied.message" = "Para poder grabar audio, por favor ve a Configuración y enciende el micrófono";
 
 /* Alert title when missing microphone access */
-"chat.mic.access.denied.title" = "Incapaz de acceder al micrófono";
+"chat.mic.access.denied.title" = "No se pudo acceder al micrófono";
 
 /* Title for generic delete button. */
 "Delete" = "Eliminar";
@@ -83,7 +83,7 @@
 "feed.privacy.descr.except" = "Compartir con todos mis contactos excepto con la gente que yo seleccione";
 
 /* Describes what 'All Contacts' feed privacy setting means. */
-"feed.privacy.descr.only" = "Solo compartir con contactos seleccionados";
+"feed.privacy.descr.only" = "Compartir solamente con contactos seleccionados";
 
 /* Description of the alert shown to user indicating their post is only shown to their favorites audience */
 "feed.privacy.list.notOwn.only.description" = "Esta publicación solo se comparte con una audiencia limitada. Puedes cambiar tu audiencia en la configuración de privacidad en cualquier momento.";
@@ -92,10 +92,10 @@
 "feed.privacy.list.only.title" = "Favoritos";
 
 /* Description of the alert shown to user indicating their post is only shown to their favorites audience */
-"feed.privacy.list.own.only.description" = "Esta publicación solo se comparte con un grupo personalizado de contactos. Puedes cambiar tu audiencia cada vez que hagas una nueva publicación, o en Configuración > Privacidad.";
+"feed.privacy.list.own.only.description" = "Esta publicación solo se comparte con un grupo personalizado de contactos. Puedes cambiar tu audiencia cada vez que realices una nueva publicación, o en Configuración > Privacidad.";
 
 /* Text shown in notification when the user is added to a new group */
-"groups.add.notification" = "Fuiste agregado a un grupo nuevo";
+"groups.add.notification" = "Fuiste agregado a un nuevo grupo";
 
 /* Generic label for search, mostly used as placeholder text for searchbar */
 "label.search" = "Búsqueda";
@@ -140,10 +140,10 @@
 "notification.new.friend.content" = "%@ ya está en HalloApp";
 
 /* Fallback text for new message notification. */
-"notification.new.message" = "Mensaje nuevo";
+"notification.new.message" = "Nuevo mensaje";
 
 /* Title for the new feed post notification. */
-"notification.new.post" = "Publicación nueva";
+"notification.new.post" = "Nueva publicación";
 
 /* New post notification text when post is one photo without caption. */
 "notification.one.photo" = "📷 foto";
@@ -167,7 +167,7 @@
 "notification.voicepost" = "Publicación de audio";
 
 /* String to auto-fill if a user tried to share to a friend. */
-"settings.share.text" = "Únete a mi red social de relaciones verdaderas en HalloApp. Bájalo gratis en halloapp.com/dl ";
+"settings.share.text" = "Únete a mi red social de relaciones reales, HalloApp. Baja la aplicación gratis en halloapp.com/dl";
 
 /* Row in Settings screen */
 "title.privacy" = "Privacidad";
